<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FirstInformation">

    <RelativeLayout
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nicher_tottho"
            android:textColor="#070707"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_marginTop="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/name"
                    android:textColor="@color/black"
                    android:focusable="true"
                    android:layout_marginBottom="13dp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:hint="@string/name"
                    android:background="@drawable/edit_text_background"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>
                <EditText
                    android:id="@+id/father"
                    android:textColor="@color/black"
                    android:layout_marginBottom="13dp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:hint="@string/father"
                    android:background="@drawable/edit_text_background"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>

                <EditText
                    android:id="@+id/mother"
                    android:textColor="@color/black"
                    android:layout_marginBottom="13dp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:hint="@string/mother"
                    android:background="@drawable/edit_text_background"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>

                <EditText
                    android:id="@+id/mobile"
                    android:textColor="@color/black"
                    android:layout_marginBottom="13dp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:hint="@string/mobile"
                    android:background="@drawable/edit_text_background"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>

                <EditText
                    android:id="@+id/national_id"
                    android:textColor="@color/black"
                    android:layout_marginBottom="13dp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:hint="@string/national_id"
                    android:background="@drawable/edit_text_background"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>

                <EditText
                    android:id="@+id/occupation"
                    android:textColor="@color/black"
                    android:layout_marginBottom="13dp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:hint="@string/occupation"
                    android:background="@drawable/edit_text_background"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>

                <EditText
                    android:id="@+id/familymemeber"
                    android:textColor="@color/black"
                    android:layout_marginBottom="13dp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:hint="@string/family_member"
                    android:background="@drawable/edit_text_background"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>

                <LinearLayout
                    android:layout_marginBottom="20dp"
                    android:layout_alignParentBottom="true"

                    android:layout_gravity="center|bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/previous"
                        android:gravity="start|center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:src="@drawable/ic_navigate_before_black_24dp"
                            android:layout_width="45dp"
                            android:layout_height="50dp"/>

                        <TextView
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:text="@string/previous_page"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/next"
                        android:gravity="end|center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:text="@string/next_page"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <ImageView
                            android:src="@drawable/ic_navigate_next_black_24dp"
                            android:layout_width="45dp"
                            android:layout_height="50dp"/>

                    </LinearLayout>



                </LinearLayout>

            </LinearLayout>

        </ScrollView>
        </LinearLayout>


    </RelativeLayout>



</LinearLayout>