<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Porishonkan">

    <RelativeLayout
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_log_in"
                android:textColor="#070707"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_marginTop="100dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/name"
                    android:textColor="@color/black"
                    android:focusable="true"
                    android:layout_marginBottom="13dp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:hint="@string/user_name"
                    android:background="@drawable/edit_text_background"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>
                <EditText
                    android:id="@+id/pass"
                    android:textColor="@color/black"
                    android:layout_marginBottom="13dp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:background="@drawable/edit_text_background"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/login"
                    android:layout_width="220dp"
                    android:layout_height="60dp"
                    android:background="@drawable/button_bg_rounded_corners"
                    android:text="@string/login_eng"
                    android:textColor="#ffff"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true"

            android:layout_gravity="center|bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/previous"
                android:gravity="start|center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/ic_navigate_before_black_24dp"
                    android:layout_width="45dp"
                    android:layout_height="50dp"/>

                <TextView
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="@string/previous_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>



</LinearLayout>